--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -17,9 +17,10 @@
 // Type
 @import "headings";
 @import "paragraphs";
-@import "blockquotes";
+@import "quotes";
 @import "links";
 @import "emphasis";
 @import "misc";
 @import "code";
 @import "fancies";
+@import "lists";
