--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -26,7 +26,7 @@ $padding-xs-horizontal:      0.5em !default;
 
 // Active element colors
 $component-active-color:    white !default;
-$component-active-bg:       $brand-primary !default;
+$component-active-bg:       $color-primary !default;
 
 // Border sizes
 $border-size-base:          2px !default;
