--- a/assets/stylesheets/source/settings/_scaffolding.scss
+++ b/assets/stylesheets/source/settings/_scaffolding.scss
@@ -3,4 +3,4 @@
 // ============================================================================
 
 $body-bg:               white;
-$highlight-color:       $brand-primary;
+$highlight-color:       $color-primary;
