--- a/assets/stylesheets/source/settings/_type.scss
+++ b/assets/stylesheets/source/settings/_type.scss
@@ -45,3 +45,4 @@ $font-weight-black:   900 !default;
 
 // Colors
 $text-color:          $gray-dark !default;
+$text-muted-color:    $gray-light !default;
