--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -39,4 +39,6 @@
 @import "mixins/leading";
 @import "mixins/leading-borders";
 @import "mixins/rem-fallback";
+@import "mixins/text-emphasis-variant";
+@import "mixins/text-overflow";
 @import "mixins/visual-baseline";
