--- a/assets/stylesheets/source/base/_emphasis.scss
+++ b/assets/stylesheets/source/base/_emphasis.scss
@@ -11,5 +11,13 @@ em, i {
 }
 
 small {
-  font-size: 87.5%;
+  font-size: 85%;
 }
+
+// Contextual colors
+@include text-emphasis-variant('.text-muted', $text-muted-color);
+@include text-emphasis-variant('.text-primary', $color-primary);
+@include text-emphasis-variant('.text-success', $state-success-text);
+@include text-emphasis-variant('.text-info', $state-info-text);
+@include text-emphasis-variant('.text-warning', $state-warning-text);
+@include text-emphasis-variant('.text-danger', $state-danger-text);
