--- a/assets/stylesheets/source/base/_links.scss
+++ b/assets/stylesheets/source/base/_links.scss
@@ -2,7 +2,7 @@
 // Links
 // ============================================================================
 
-$link-color:        $brand-primary;
+$link-color:        $color-primary;
 $link-hover-color:  darken($link-color, 15%);
 
 a {
