--- a/assets/stylesheets/source/base/_fancies.scss
+++ b/assets/stylesheets/source/base/_fancies.scss
@@ -50,3 +50,12 @@ p + .drop-cap {
   letter-spacing: 0.1em;
   text-transform: uppercase;
 }
+
+// Hyphens
+// @source: http://meyerweb.com/eric/thoughts/2012/12/17/where-to-avoid-css-hyphenation
+abbr, acronym, blockquote,
+code, dir, kbd,
+listing, plaintext, q,
+samp, tt, var, xmp {
+  @include hyphens(none);
+}
