--- a/assets/stylesheets/source/base/_scaffolding.scss
+++ b/assets/stylesheets/source/base/_scaffolding.scss
@@ -23,6 +23,7 @@ html {
 }
 
 body {
+  @include hyphens(auto);
   -webkit-font-smoothing: antialiased;
   background-color: $body-bg;
   color: $text-color;
