--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -34,6 +34,7 @@
 @import "mixins/debug";
 @import "mixins/font-feature-settings";
 @import "mixins/font-size";
+@import "mixins/font-smoothing";
 @import "mixins/headings";
 @import "mixins/hyphens";
 @import "mixins/leading";
