Clean out type file

--- a/assets/stylesheets/source/base/_lists.scss
+++ b/assets/stylesheets/source/base/_lists.scss
@@ -2,6 +2,8 @@
 // Lists
 // ============================================================================
 
+// @todo: lists: http://j.eremy.net/align-lists-flush-left/
+
 // Unordered and ordered lists
 ul, ol {
   @include margin(0 0 1);
