--- a/assets/stylesheets/source/base/_misc.scss
+++ b/assets/stylesheets/source/base/_misc.scss
@@ -2,6 +2,8 @@
 // Misc Typography
 // ============================================================================
 
+// @todo: http://csswizardry.com/2011/01/html5-and-text-level-semantics/#small-el
+
 // Addresses
 address {
   @include margin-bottom(1);
