--- a/assets/stylesheets/source/base/base.scss
+++ b/assets/stylesheets/source/base/base.scss
@@ -8,11 +8,9 @@
 // in all occurrences on the page.
 // @source: http://smacss.com/book/type-base
 
-// Reset
-@import "normalize";
-
 // Base
-@import "scaffolding";
+@import "normalize";
+@import "main";
 
 // Type
 @import "code";
@@ -24,3 +22,7 @@
 @import "misc";
 @import "paragraphs";
 @import "quotes";
+
+// Images
+// Forms
+// Tables
