Add image styles

--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -40,6 +40,8 @@
 @import "mixins/leading";
 @import "mixins/leading-borders";
 @import "mixins/rem-fallback";
+@import "mixins/responsive-image";
+@import "mixins/tab-focus";
 @import "mixins/text-emphasis-variant";
 @import "mixins/text-overflow";
 @import "mixins/visual-baseline";
