--- a/assets/stylesheets/source/base/_links.scss
+++ b/assets/stylesheets/source/base/_links.scss
@@ -5,15 +5,17 @@
 $link-color:        $color-primary;
 $link-hover-color:  darken($link-color, 15%);
 
-a,
-a:visited {
+a {
   color: $link-color;
   text-decoration: none;
 
   &:hover,
-  &:active,
   &:focus {
     color: $link-hover-color;
     text-decoration: underline;
+  }
+
+  &:focus {
+    @include tab-focus();
   }
 }
