--- a/assets/stylesheets/source/base/_images.scss
+++ b/assets/stylesheets/source/base/_images.scss
@@ -16,12 +16,10 @@ $thumbnail-caption-padding:   9px !default;
 // Base styles
 // ----------------------------------------------------------------------------
 
-// Figures
 figure {
   margin: 0;
 }
 
-// Images
 img {
   vertical-align: middle;
 }
@@ -31,7 +29,7 @@ img {
 
 // Ensure images don't scale beyond their parents
 .img-responsive {
-  @include responsive-image();
+  @include img-responsive();
 }
 
 .img-rounded {
@@ -51,5 +49,5 @@ img {
   padding: $thumbnail-padding;
 
   // Keep them at most 100% wide
-  @include responsive-image(inline-block);
+  @include img-responsive(inline-block);
 }
