--- a/assets/stylesheets/source/base/_quotes.scss
+++ b/assets/stylesheets/source/base/_quotes.scss
@@ -6,7 +6,7 @@
 // @source: http://html5doctor.com/cite-and-blockquote-reloaded/
 
 blockquote {
-  @include font-size($font-size-md);
+  @include font-size($font-size-lg);
   border-left: $border-size-lg solid;
   padding-left: 2rem;
   quotes: "\201C" "\201D";
