--- a/assets/stylesheets/source/base/_main.scss
+++ b/assets/stylesheets/source/base/_main.scss
@@ -24,6 +24,7 @@ html {
 body {
   @include font-smoothing();
   @include hyphens(auto);
+  @include outer-container;
   background-color: $body-bg;
   color: $text-color;
   font-family: $font-family-base;
