Turn off visual baseline by default

--- a/assets/stylesheets/source/settings/_debug.scss
+++ b/assets/stylesheets/source/settings/_debug.scss
@@ -13,7 +13,7 @@ $visual-grid-index:         back !default;
 $visual-grid-opacity:       0.5 !default;
 
 // Displays a baseline grid to make sure the vertical rhythm is consistent.
-$visual-baseline:           true !default;
+$visual-baseline:           false !default;
 $visual-baseline-color:     lightgreen !default;
 $visual-baseline-image:     null !default;
 
