Scaffolding to Main

--- a/assets/stylesheets/source/settings/_main.scss
+++ b/assets/stylesheets/source/settings/_main.scss
@@ -1,5 +1,5 @@
 // ============================================================================
-// Scaffolding settings
+// Settings for main HTML and body elements
 // ============================================================================
 
 $body-bg:               white;
