--- a/assets/stylesheets/source/settings/_main.scss
+++ b/assets/stylesheets/source/settings/_main.scss
@@ -3,4 +3,6 @@
 // ============================================================================
 
 $body-bg:               white;
-$highlight-color:       $color-primary;
+$border-box-sizing:     true;
+$select-color:          $color-primary;
+$include-print-styles:  false;
