--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -31,6 +31,7 @@
 @import "scaffolding";
 
 // Mixins
+@import "mixins/border-box-sizing";
 @import "mixins/debug";
 @import "mixins/center-block";
 @import "mixins/font-feature-settings";
