--- a/assets/stylesheets/source/base/_main.scss
+++ b/assets/stylesheets/source/base/_main.scss
@@ -4,25 +4,48 @@
 
 // Main is the base HTML structure all web pages will have.
 
-// Reset the box-sizing
-*,
-*:before,
-*:after {
-  @include box-sizing(border-box);
+// Set box-sizing globally to handle padding and border widths
+// @source: http://www.paulirish.com/2012/box-sizing-border-box-ftw/
+@if $border-box-sizing {
+  *,
+  *:before,
+  *:after {
+    @include box-sizing(border-box);
+  }
+}
+
+// Text selection color
+// Remove text-shadow in selection highlight: h5bp.com/i
+// These selection rule sets have to be separate.
+::selection {
+  background: $select-color;
+  text-shadow: none;
+}
+
+::-moz-selection {
+  background: $select-color;
+  text-shadow: none;
 }
 
 html {
-  @include prefixer(text-size-adjust, 100%, webkit ms);
+  // Turns off tap highlighting in mobile Safari
+  // @source: http://css-tricks.com/snippets/css/remove-gray-highlight-when-tapping-links-in-mobile-safari/
   -webkit-tap-highlight-color: rgba(0,0,0,0);
   font-size: root-size(14px);
+  min-height: 100%;
+  overflow-y: scroll;
 
+  // Base font size on small screens & up
   @include media($screen-sm) {
     font-size: root-size($font-size-base);
   }
 }
 
 body {
-  @include font-smoothing();
+  @if $font-smoothing {
+    @include font-smoothing();
+  }
+  @include font-size($font-size-base);
   @include hyphens(auto);
   @include outer-container;
   background-color: $body-bg;
@@ -30,5 +53,4 @@ body {
   font-family: $font-family-base;
   font-style: normal;
   font-weight: $font-weight-normal;
-  line-height: $line-height-base;
 }
