--- a/assets/stylesheets/source/settings/_colors.scss
+++ b/assets/stylesheets/source/settings/_colors.scss
@@ -2,6 +2,10 @@
 // Color Palette
 // ============================================================================
 
+// This file is for declaring global color values. Any color variables
+// specific to a component (e.g. $widget-border-color: $blue) must exist at
+// the component level.
+
 // Color variables declared in hsl() to allow for easy adjusting w/o an image
 // editor. SASS will convert these values to HEX in the compiled CSS.
 // @source: http://css-tricks.com/yay-for-hsla/
@@ -21,18 +25,18 @@ $color-warning:         hsl( 34, 82%, 56%) !default;
 $color-danger:          hsl(  4, 66%, 53%) !default;
 
 // State colors
-$state-success-text:             $color-success !default;
-$state-success-bg:               lighten($state-success-text, 20%) !default;
-$state-success-border:           darken(adjust-hue($state-success-bg, -10), 5%) !default;
+$state-success-text:    $color-success !default;
+$state-success-bg:      lighten($state-success-text, 20%) !default;
+$state-success-border:  darken(adjust-hue($state-success-bg, -10), 5%) !default;
 
-$state-info-text:                $color-info !default;
-$state-info-bg:                  lighten($state-info-text, 20%) !default;
-$state-info-border:              darken(adjust-hue($state-info-bg, -10), 7%) !default;
+$state-info-text:       $color-info !default;
+$state-info-bg:         lighten($state-info-text, 20%) !default;
+$state-info-border:     darken(adjust-hue($state-info-bg, -10), 7%) !default;
 
-$state-warning-text:             $color-warning !default;
-$state-warning-bg:               lighten($state-warning-text, 20%) !default;
-$state-warning-border:           darken(adjust-hue($state-warning-bg, -10), 5%) !default;
+$state-warning-text:    $color-warning !default;
+$state-warning-bg:      lighten($state-warning-text, 20%) !default;
+$state-warning-border:  darken(adjust-hue($state-warning-bg, -10), 5%) !default;
 
-$state-danger-text:              $color-danger !default;
-$state-danger-bg:                lighten($state-danger-text, 20%) !default;
-$state-danger-border:            darken(adjust-hue($state-danger-bg, -10), 5%) !default;
+$state-danger-text:     $color-danger !default;
+$state-danger-bg:       lighten($state-danger-text, 20%) !default;
+$state-danger-border:   darken(adjust-hue($state-danger-bg, -10), 5%) !default;
