--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -11,6 +11,13 @@ $border-radius-base:         4px !default;
 $border-radius-lg:           6px !default;
 $border-radius-sm:           3px !default;
 
+// Borders
+$border-size-base:           2px !default;
+$border-size-lg:             4px !default;
+$border-size-sm:             1px !default;
+
+$border-color-base:          $gray-lighter;
+
 // Padding
 $padding-base-vertical:      0.5em !default;
 $padding-base-horizontal:    1em !default;
@@ -25,10 +32,5 @@ $padding-xs-vertical:        0.25em !default;
 $padding-xs-horizontal:      0.5em !default;
 
 // Active element colors
-$component-active-color:    white !default;
-$component-active-bg:       $color-primary !default;
-
-// Border sizes
-$border-size-base:          2px !default;
-$border-size-lg:            4px !default;
-$border-size-sm:            1px !default;
+$component-active-color:     white !default;
+$component-active-bg:        $color-primary !default;
