--- a/assets/stylesheets/source/settings/_grid.scss
+++ b/assets/stylesheets/source/settings/_grid.scss
@@ -3,9 +3,20 @@
 // ============================================================================
 
 // Variables for Bourbon Neat grids
+// If $column is set to a relative value, the grid will be fluid.
 // @source: http://neat.bourbon.io/docs/#variables
 
-$max-width:                  em(960, $font-size-base);
-$grid-columns:               12;
-$column:                     golden-ratio(1%, 3);
-$gutter:                     golden-ratio(1%, 1);
+$max-width:                 em(960, $font-size-base);
+$grid-columns:              12;
+$column:                    golden-ratio(1%, 3);
+$gutter:                    golden-ratio(1%, 1);
+
+// Grid options
+$default-layout-direction:  LTR;
+$include-grid-classes:      false;
+
+
+// @todo: $grid-style: [static | fluid | flex]
+// @todo: $column-style: [equal | ratio]
+// $grid-style:                fluid; // static | fluid | flex
+// $column-style:              equal; // equal | ratio
