--- a/assets/stylesheets/source/settings/mixins/_text-hide.scss
+++ b/assets/stylesheets/source/settings/mixins/_text-hide.scss
@@ -9,5 +9,7 @@
   border: 0;
   color: transparent;
   font: #{0/0} a;
+  overflow: hidden;
   text-shadow: none;
+  *text-indent: -9999px; // IE 6/7 fallback
 }
