Remove the irrational grid

--- a/assets/stylesheets/source/base/_print.scss
+++ b/assets/stylesheets/source/base/_print.scss
@@ -1,4 +1,4 @@
-@if $print-styles {
+@if $include-print-styles {
 
   // ============================================================================
   // Print Styles
