--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -28,10 +28,9 @@
 @import "components";
 @import "debug";
 @import "grid";
-@import "scaffolding";
+@import "main";
 
 // Mixins
-@import "mixins/border-box-sizing";
 @import "mixins/debug";
 @import "mixins/center-block";
 @import "mixins/font-feature-settings";
