--- a/assets/stylesheets/source/settings/mixins/_font-feature-settings.scss
+++ b/assets/stylesheets/source/settings/mixins/_font-feature-settings.scss
@@ -13,8 +13,8 @@
 
     // Add each listed feature to the standard and old Mozilla values
     @each $feature in $feature-list {
-      $standard: append( $standard, '#{$feature}' #{$val}, comma );
-      $old-moz: append( $old-moz, '#{$feature}=#{$val}', comma );
+      $standard: append($standard, "#{$feature}" "#{$val}", comma);
+      $old-moz: append($old-moz, "#{$feature}=#{$val}", comma);
     }
 
     // Print out the prefixed and non-prefixed code for all of the listed features
