All type settings to body

--- a/assets/stylesheets/source/settings/_grid.scss
+++ b/assets/stylesheets/source/settings/_grid.scss
@@ -15,6 +15,6 @@ $gutter:                    golden-ratio(1%, 1);
 $default-layout-direction:  LTR;
 $include-grid-classes:      false;
 
-
+// @todo:
 // $grid-style:                fluid; // static | fluid | flex
 // $column-style:              equal; // equal | ratio
