--- a/assets/stylesheets/source/base/_main.scss
+++ b/assets/stylesheets/source/base/_main.scss
@@ -28,17 +28,9 @@
 }
 
 html {
-  // Turns off tap highlighting in mobile Safari
-  // @source: http://css-tricks.com/snippets/css/remove-gray-highlight-when-tapping-links-in-mobile-safari/
-  -webkit-tap-highlight-color: rgba(0,0,0,0);
-  font-size: root-size(14px);
+  -webkit-tap-highlight-color: rgba(0,0,0,0); // turn off mobile safari tap highlight
   min-height: 100%;
   overflow-y: scroll;
-
-  // Base font size on small screens & up
-  @include media($screen-sm) {
-    font-size: root-size($font-size-base);
-  }
 }
 
 body {
@@ -51,6 +43,12 @@ body {
   background-color: $body-bg;
   color: $text-color;
   font-family: $font-family-base;
+  font-size: root-size(14px);
   font-style: normal;
   font-weight: $font-weight-normal;
+
+  // Base font size on small screens & up
+  @include media($screen-sm) {
+    font-size: root-size($font-size-base);
+  }
 }
