--- a/assets/stylesheets/source/settings/_breakpoints.scss
+++ b/assets/stylesheets/source/settings/_breakpoints.scss
@@ -4,14 +4,27 @@
 
 // Sets the default media feature that media() and new-breakpoint() revert to
 // when only a breakpoint value is passed.
-$default-feature:        min-width;
+$default-feature:       min-width;
 
 // Default screen size breakpoints to use with media queries.
-$screen-xs:               (480 / 16) * 1em !default;
-$screen-sm:               (640 / 16) * 1em !default;
-$screen-md:               (800 / 16) * 1em !default;
-$screen-lg:              (1024 / 16) * 1em !default;
-$screen-xl:              (1600 / 16) * 1em !default;
+$screen-xs:             em( 480) !default;
+$screen-sm:             em( 640) !default;
+$screen-md:             em( 800) !default;
+$screen-lg:             em(1024) !default;
+$screen-xl:             em(1600) !default;
+
+// Breakpoint presets
+$screen-xs-up:          new-breakpoint(min-width $screen-xs);
+$screen-sm-up:          new-breakpoint(min-width $screen-sm);
+$screen-md-up:          new-breakpoint(min-width $screen-md);
+$screen-lg-up:          new-breakpoint(min-width $screen-lg);
+$screen-xl-up:          new-breakpoint(min-width $screen-xl);
+
+$screen-xs-down:        new-breakpoint(max-width $screen-xs);
+$screen-sm-down:        new-breakpoint(max-width $screen-sm);
+$screen-md-down:        new-breakpoint(max-width $screen-md);
+$screen-lg-down:        new-breakpoint(max-width $screen-lg);
+$screen-xl-down:        new-breakpoint(max-width $screen-xl);
 
 // The point at which the grid switches to favor larger screens
 $breakpoint-grid-float:   $screen-sm;
