--- a/assets/stylesheets/source/settings/_components.scss
+++ b/assets/stylesheets/source/settings/_components.scss
@@ -7,30 +7,30 @@
 // of the component's .scss file.
 
 // Border radius
-$border-radius-base:         4px !default;
-$border-radius-lg:           6px !default;
-$border-radius-sm:           3px !default;
+$border-radius-base:        4px !default;
+$border-radius-lg:          6px !default;
+$border-radius-sm:          3px !default;
 
 // Borders
-$border-size-base:           2px !default;
-$border-size-lg:             4px !default;
-$border-size-sm:             1px !default;
-
-$border-color-base:          $gray-lighter;
+$border-color-base:         $gray-lighter;
+$border-size-base:          2px !default;
+$border-size-sm:            1px !default;
+$border-size-lg:            4px !default;
 
 // Padding
-$padding-base-vertical:      0.5em !default;
-$padding-base-horizontal:    1em !default;
-
-$padding-lg-vertical:        1em !default;
-$padding-lg-horizontal:      1.5em !default;
-
-$padding-sm-vertical:        0.35em !default;
-$padding-sm-horizontal:      0.75em !default;
-
-$padding-xs-vertical:        0.25em !default;
-$padding-xs-horizontal:      0.5em !default;
+$padding-base-vertical:     0.5em !default;
+$padding-base-horizontal:   1em !default;
+$padding-lg-vertical:       1em !default;
+$padding-lg-horizontal:     1.5em !default;
+$padding-sm-vertical:       0.35em !default;
+$padding-sm-horizontal:     0.75em !default;
+$padding-xs-vertical:       0.25em !default;
+$padding-xs-horizontal:     0.5em !default;
 
 // Active element colors
-$component-active-color:     white !default;
-$component-active-bg:        $color-primary !default;
+$component-active-color:    white !default;
+$component-active-bg:       $color-primary !default;
+
+// Animation
+$timing-base:               .15s;
+$easing-base:               ease-in-out;
