--- a/assets/stylesheets/source/settings/settings.scss
+++ b/assets/stylesheets/source/settings/settings.scss
@@ -41,6 +41,7 @@
 @import "mixins/img-responsive";
 @import "mixins/leading";
 @import "mixins/leading-borders";
+@import "mixins/placeholder";
 @import "mixins/rem-fallback";
 @import "mixins/tab-focus";
 @import "mixins/text-emphasis-variant";
